test/conformance/chainsaw/generating-policies/data/sync/sync-trigger-stops-matching/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sync-trigger-stops-matching
  labels:
    opt-in: "true"
