test/conformance/chainsaw/generating-policies/data/sync/sync-trigger-stops-matching/downstream-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: sync-trigger-stops-matching
  namespace: sync-trigger-stops-matching
data:
  source: GeneratingPolicy
